TM-830 : Fixed the Project Header Menu Layout issue for IE-7 , IE-9
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@2046 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/tds.css
+++ b/web-app/css/tds.css
@@ -225,6 +225,12 @@
 .megamenu ul li {
 	display:table;
 }
+
+*+html .megamenu ul li {
+	display: block;
+	clear:both;
+	}
+	
 .megamenu ul li a {
 	width:auto;
 	height:16px;
@@ -614,6 +620,7 @@ td .dep-Questioned {
 	display: none;  left:-527px  !important;    position: absolute  !important; top: 20px; 
 }
 .client { display: none;  left:0px  !important;    position: absolute  !important; top:20px;}
+.admin { display: none;  left:0px  !important;    position: absolute  !important; top:50px;}
 .mmtable .mmlink { 
 	border-right:0px !important;
 }
